added hover.css, global and header styling changes

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
-@import '/partials/setup';
-@import '/partials/utils';
-@import '/partials/global';
-@import '/partials/header';
-@import '/partials/connect';
-@import '/partials/about';
-@import '/partials/gallery';
+@import '../partials/global';
+@import '../partials/setup';
+@import '../partials/utils';
+@import '../partials/header';
+@import '../partials/connect';
+@import '../partials/about';
+@import '../partials/gallery';
