--- a/partials/_global.scss
+++ b/partials/_global.scss
@@ -1,6 +1,7 @@
 html,
 body {
 	font-size: 62.5%;
+	font-family: 'Roboto', sans-serif;
 }
 
 h1,
@@ -12,6 +13,26 @@ p {
 	padding: 0;
 }
 
+h1 {
+	@include heading(22px, 3.6rem, 700);
+}
+
+h2 {
+	@include heading(56px, 3.6rem, 700);
+}
+
+h3 {
+	@include heading(22px, 3.6rem, 700);
+}
+
+h4 {
+	@include heading(22px, 2.4rem, 400);
+}
+
+p {
+	@include text(35px, 1.8rem);
+}
+
 ul,
 li {
 	margin: 0;
@@ -20,6 +41,7 @@ li {
 }
 
 a {
+	@include text(0px, 2rem);
 	display: block;
 }
 
