--- a/styles/style.css
+++ b/styles/style.css
@@ -1,38 +1,3 @@
-html,
-body {
-  font-size: 62.5%;
-}
-
-h1,
-h2,
-h3,
-h4,
-p {
-  margin: 0;
-  padding: 0;
-}
-
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-a {
-  display: block;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-}
-
-.wrapper {
-  max-width: 90%;
-  margin: 0 auto;
-}
-
 /* SETUP STYLING STARTS */
 article,
 aside,
@@ -246,6 +211,83 @@ input::-moz-focus-inner {
   overflow: hidden;
 }
 
+html,
+body {
+  font-size: 62.5%;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-family: "Monsterrat", sans-serif;
+  color: #262626;
+  font-size: 3.6rem;
+  line-height: 22px;
+  font-weight: 700;
+}
+
+h2 {
+  font-family: "Monsterrat", sans-serif;
+  color: #262626;
+  font-size: 3.6rem;
+  line-height: 56px;
+  font-weight: 700;
+}
+
+h3 {
+  font-family: "Monsterrat", sans-serif;
+  color: #262626;
+  font-size: 3.6rem;
+  line-height: 22px;
+  font-weight: 700;
+}
+
+h4 {
+  font-family: "Monsterrat", sans-serif;
+  color: #262626;
+  font-size: 2.4rem;
+  line-height: 22px;
+  font-weight: 400;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.8rem;
+  line-height: 35px;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  font-family: "Roboto", sans-serif;
+  font-size: 2rem;
+  line-height: 0px;
+  display: block;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 90%;
+  margin: 0 auto;
+}
+
 header {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.3))), url(/assets/Website-cover.jpg);
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0.3) 100%), url(/assets/Website-cover.jpg);
@@ -322,5 +364,109 @@ header {
 
 .show.navigationContainer {
   display: block;
+}
+
+/* CONNECT SECTION STYLES */
+.connect {
+  background-color: #709fc1;
+  color: #fff;
+  min-height: 20vh;
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.socialContainer i {
+  font-size: 5rem;
+  color: #f5f5f5;
+  margin: 75px;
+  -webkit-transition: 300ms ease-in;
+  transition: 300ms ease-in;
+}
+
+.social i.fa-facebook:hover {
+  color: #3b5998;
+}
+
+.social i.fa-instagram:hover {
+  color: #bc2a8d;
+}
+
+.social i.fa-yelp:hover {
+  color: #af0606;
+}
+
+/* ABOUT TEAM STYLES */
+.about {
+  background-color: #d3d3d3;
+  padding: 100px 0;
+  min-height: 100vh;
+}
+
+.about h3 {
+  font-family: "Monsterrat", sans-serif;
+  color: #262626;
+  font-size: 4rem;
+  line-height: 3;
+  font-weight: 700;
+  color: #008ed6;
+}
+
+.about p {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.5;
+  color: #262626;
+  font-weight: 300;
+  width: 90%;
+}
+
+.bioContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.team {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 50px 100px;
+}
+
+.mukka img,
+.fenrir img {
+  float: right;
+  margin-right: 100px;
+}
+
+.bioText {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 300px;
+          flex: 1 1 300px;
+}
+
+.teamImage {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 400px;
+          flex: 1 1 400px;
+}
+
+.teamImage img {
+  width: 400px;
+  border-radius: 50%;
 }
 /*# sourceMappingURL=style.css.map */
