--- a/styles/style.css
+++ b/styles/style.css
@@ -227,23 +227,26 @@ p {
 }
 
 h1 {
-  font-family: "Monsterrat", sans-serif;
+  font-family: "Monserrat", sans-serif;
+  text-transform: uppercase;
   color: #262626;
-  font-size: 3.6rem;
+  font-size: 7rem;
   line-height: 22px;
   font-weight: 700;
 }
 
 h2 {
-  font-family: "Monsterrat", sans-serif;
+  font-family: "Monserrat", sans-serif;
+  text-transform: uppercase;
   color: #262626;
-  font-size: 3.6rem;
+  font-size: 5rem;
   line-height: 56px;
   font-weight: 700;
 }
 
 h3 {
-  font-family: "Monsterrat", sans-serif;
+  font-family: "Monserrat", sans-serif;
+  text-transform: uppercase;
   color: #262626;
   font-size: 3.6rem;
   line-height: 22px;
@@ -251,7 +254,8 @@ h3 {
 }
 
 h4 {
-  font-family: "Monsterrat", sans-serif;
+  font-family: "Monserrat", sans-serif;
+  text-transform: uppercase;
   color: #262626;
   font-size: 2.4rem;
   line-height: 22px;
@@ -274,7 +278,10 @@ li {
 a {
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
-  line-height: 0px;
+  line-height: 0;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 3px;
+  font-weight: bold;
   display: block;
 }
 
@@ -410,7 +417,8 @@ header {
 }
 
 .about h3 {
-  font-family: "Monsterrat", sans-serif;
+  font-family: "Monserrat", sans-serif;
+  text-transform: uppercase;
   color: #262626;
   font-size: 4rem;
   line-height: 3;
@@ -468,5 +476,39 @@ header {
 .teamImage img {
   width: 400px;
   border-radius: 50%;
+}
+
+/* GALLERY STYLES */
+.gallery {
+  background-color: #f5f5f5;
+  min-height: 100vh;
+  padding: 100px 0;
+}
+
+.carousel-cell {
+  margin: 100px 0;
+  width: 100%;
+  height: 500px;
+  background: #f5f5f5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.carousel-cell img {
+  display: block;
+  max-height: 100%;
+}
+
+ol.flickity-page-dots {
+  padding-bottom: 50px;
 }
 /*# sourceMappingURL=style.css.map */
