--- a/partials/_global.scss
+++ b/partials/_global.scss
@@ -19,6 +19,19 @@ h1 {
 
 h2 {
 	@include heading(56px, 5rem, 700);
+	position: relative;
+	color: $blue-heading;
+	font-weight: 700;
+}
+
+h2::after {
+	content: "";
+	position: absolute;
+	bottom: -15px;
+	left: 42%;
+	background: #c71585;
+	width: 125px;
+	height: 3px;
 }
 
 h3 {
