--- a/partials/_utils.scss
+++ b/partials/_utils.scss
@@ -2,7 +2,7 @@
 $off-white: #f5f5f5;
 $black-shade: #262626;
 $off-blue: #709fc1;
-$blue-underline: #008ed6;
+$blue-heading: #008ed6;
 
 @mixin heading($lineHeight, $fontSize, $fontWeight) {
 	font-family: "Monserrat", sans-serif;
