--- a/styles/style.css
+++ b/styles/style.css
@@ -242,6 +242,19 @@ h2 {
   font-size: 5rem;
   line-height: 56px;
   font-weight: 700;
+  position: relative;
+  color: #008ed6;
+  font-weight: 700;
+}
+
+h2::after {
+  content: "";
+  position: absolute;
+  bottom: -15px;
+  left: 42%;
+  background: #c71585;
+  width: 125px;
+  height: 3px;
 }
 
 h3 {
@@ -416,6 +429,10 @@ header {
   min-height: 100vh;
 }
 
+.about h2 {
+  text-align: center;
+}
+
 .about h3 {
   font-family: "Monserrat", sans-serif;
   text-transform: uppercase;
@@ -485,6 +502,10 @@ header {
   padding: 100px 0;
 }
 
+.gallery h2 {
+  text-align: center;
+}
+
 .carousel-cell {
   margin: 100px 0;
   width: 100%;
@@ -510,5 +531,346 @@ header {
 
 ol.flickity-page-dots {
   padding-bottom: 50px;
+}
+
+/* SERVICES STYLES */
+.services {
+  padding: 100px 0;
+  min-height: 100vh;
+  background-color: #709fc1;
+}
+
+.servicesContainer {
+  position: relative;
+}
+
+.servicesContainer h2 {
+  color: #f5f5f5;
+  text-align: center;
+}
+
+.servicesContainer p {
+  font-family: "Roboto", sans-serif;
+  font-size: 2.5rem;
+  line-height: 1.6;
+  padding: 50px 0;
+  text-align: center;
+}
+
+.servicesContainer .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 300ms ease-in;
+  transition: 300ms ease-in;
+}
+
+.servicesContainer .social i {
+  font-size: 7rem;
+  padding: 0 55px;
+  color: #f5f5f5;
+  border-radius: 50%;
+  -webkit-transition: 300ms ease-in;
+  transition: 300ms ease-in;
+}
+
+/*SERVICE CARDS STYLES */
+.dogServices {
+  padding-top: 50px;
+  background-color: #709fc1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+
+.dogServices h3 {
+  font-family: "Monserrat", sans-serif;
+  text-transform: uppercase;
+  color: #262626;
+  font-size: 4rem;
+  line-height: 1.6;
+  font-weight: 700;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #709fc1;
+}
+
+.dogServices p {
+  font-family: "Roboto", sans-serif;
+  font-size: 3rem;
+  line-height: 1.6;
+  color: #709fc1;
+  text-align: center;
+}
+
+.dogServices .card {
+  width: 350px;
+  min-height: 350px;
+  -webkit-perspective: 800px;
+          perspective: 800px;
+  position: relative;
+  margin: 50px;
+}
+
+.dogServices .front,
+.dogServices .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.9s;
+  transition: all 0.9s;
+  -webkit-backface-visibility: hidden;
+}
+
+.dogServices .front {
+  background-color: #f5f5f5;
+  color: #000;
+}
+
+.dogServices .back {
+  background-color: #d3d3d3;
+  color: #f5f5f5;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: 15px;
+}
+
+.dogServices .card:hover .back {
+  -webkit-transform: rotateY(0);
+          transform: rotateY(0);
+}
+
+.dogServices .card:hover .front {
+  -webkit-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+}
+
+/* CONTACT STYLES */
+.contact {
+  background-color: #d3d3d3;
+  min-height: 100vh;
+  padding: 100px 0;
+}
+
+.contact h2 {
+  color: #008ed6;
+  text-align: center;
+}
+
+.contactContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 100px 0;
+}
+
+.icon i {
+  font-size: 5rem;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 400ms ease-in;
+  transition: 400ms ease-in;
+}
+
+.icon i:hover {
+  color: #709fc1;
+}
+
+.contactLink a {
+  color: #262626;
+  font-weight: 400;
+  padding-top: 50px;
+}
+
+.googleMap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 500ms ease-in;
+  transition: 500ms ease-in;
+  margin-top: 25px;
+}
+
+iframe:hover {
+  -webkit-box-shadow: 5px 5px 25px #000;
+          box-shadow: 5px 5px 25px #000;
+}
+
+/* FORM STYLES */
+.formContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.formInfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.formInfo h3 {
+  font-size: 2.5rem;
+  font-style: italic;
+  font-weight: 500;
+}
+
+.formInfo p {
+  font-size: 1.4rem;
+  font-weight: 300;
+}
+
+form {
+  margin-top: 20px;
+}
+
+select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  font-size: 1.8rem;
+  appearance: none;
+  border: 1px solid #000;
+  background-image: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png);
+  background-repeat: no-repeat;
+  background-position: 95% center;
+  width: 600px;
+  border-radius: 5px;
+  padding: 25px;
+}
+
+input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.8rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background-color: #fff;
+  color: #000;
+  width: 600px;
+  padding: 25px;
+  margin-top: 20px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+
+textarea {
+  width: 600px;
+  margin-top: 20px;
+  padding: 25px;
+  font-size: 1.8rem;
+}
+
+input[type="submit"] {
+  background-color: #709fc1;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1.8rem;
+}
+
+select:hover,
+input:hover {
+  -webkit-box-shadow: 5px 5px #262626;
+          box-shadow: 5px 5px #262626;
+  -webkit-transition: 300ms ease-out;
+  transition: 300ms ease-out;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 25px 0;
+  background: #f5f5f5;
+}
+
+footer a {
+  display: inline;
+  letter-spacing: 0;
+  text-decoration: none;
+  color: #262626;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
 /*# sourceMappingURL=style.css.map */
