--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,3 +5,6 @@
 @import '../partials/connect';
 @import '../partials/about';
 @import '../partials/gallery';
+@import '../partials/services';
+@import '../partials/contact';
+@import '../partials/footer';
