finishing touches on desktop styling

--- a/partials/_connect.scss
+++ b/partials/_connect.scss
@@ -20,12 +20,15 @@
 
 .social i.fa-facebook:hover {
 	color: #3b5998;
+	transform: scale(1.2);
 }
 
 .social i.fa-instagram:hover {
 	color: #bc2a8d;
+	transform: scale(1.2);
 }
 
 .social i.fa-yelp:hover {
 	color: #af0606;
+	transform: scale(1.2);
 }
