--- a/partials/_about.scss
+++ b/partials/_about.scss
@@ -28,7 +28,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	padding: 50px 100px;
+	padding: 50px 0;
 }
 
 .mukka img,
@@ -38,7 +38,7 @@
 }
 
 .bioText {
-	flex: 1 1 300px;
+	flex: 1 1 450px;
 }
 
 .teamImage {
