styled edge cases based off feedback from friends on mobile devices

--- a/partials/_mediaQueries.scss
+++ b/partials/_mediaQueries.scss
@@ -97,12 +97,10 @@
 		justify-content: space-around;
 	}
 
-	.servicesContainer h3 {
-		padding-top: 50px;
-	}
-
-	.servicesContainer h3.quote::before {
-		top: 20%;
+	.servicesContainer {
+		h3 {
+			padding-top: 50px;
+		}
 	}
 
 	.quote {
@@ -168,10 +166,6 @@
 		text-align: center;
 	}
 
-	.servicesContainer h3.quote::before {
-		top: 12%;
-	}
-
 	h2::after {
 		left: unset;
 		right: 50%;
@@ -186,7 +180,6 @@
 	}
 
 	.team {
-		padding: 0 50px;
 		text-align: center;
 	}
 
@@ -209,15 +202,11 @@
 
 	.about p {
 		width: 100%;
-		padding-bottom: 50px;
+		padding: 0;
 	}
 
 	ol.flickity-page-dots {
 		padding-bottom: 100px;
-	}
-
-	.servicesContainer h3.quote::before {
-		left: 40%;
 	}
 
 	.dogServices {
@@ -230,7 +219,7 @@
 	.about,
 	.contact,
 	.contactContainer {
-		padding: 20px 0 0 0;
+		padding: 50px 0;
 	}
 
 	.contact {
@@ -267,7 +256,17 @@
 	input,
 	select,
 	textarea {
-		width: 300px;
+		width: 320px;
+	}
+}
+
+// EDGE CASE
+
+@media screen and (max-width: 500px) {
+	.social {
+		flex-direction: column;
+		align-items: center;
+		margin: 0;
 	}
 }
 
@@ -280,6 +279,10 @@
 	}
 	.exitResponsive {
 		margin-left: 10%;
+	}
+
+	.carousel-cell {
+		height: 300px;
 	}
 
 	.servicesContainer .social i {
@@ -303,5 +306,14 @@
 		padding-top: 20px;
 		max-width: 300px;
 		max-height: 300px;
+	}
+
+	footer {
+		p {
+			font-size: 1.5rem;
+		}
+		a {
+			font-size: 1.5rem;
+		}
 	}
 }
