--- a/styles/style.css
+++ b/styles/style.css
@@ -478,10 +478,21 @@ header {
   padding: 50px 0;
 }
 
+.teamImage img {
+  margin: 0 auto;
+}
+
+.mukka h3,
+.mukka p,
+.fenrir h3,
+.fenrir p {
+  text-align: right;
+  width: 90%;
+}
+
 .mukka img,
 .fenrir img {
-  float: right;
-  margin-right: 100px;
+  margin: 0 auto;
 }
 
 .bioText {
@@ -492,8 +503,8 @@ header {
 
 .teamImage {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 400px;
-          flex: 1 1 400px;
+      -ms-flex: 1 1 450px;
+          flex: 1 1 450px;
 }
 
 .teamImage img {
@@ -1086,8 +1097,14 @@ footer a:hover {
             order: 1;
   }
   .about p {
-    width: 100%;
+    width: 95%;
     padding: 0;
+    text-align: center;
+  }
+  .team p,
+  .team h3 {
+    text-align: center;
+    width: unset;
   }
   ol.flickity-page-dots {
     padding-bottom: 100px;
