--- a/partials/_services.scss
+++ b/partials/_services.scss
@@ -37,6 +37,7 @@
 	padding-top: 50px;
 	background-color: $off-blue;
 	display: flex;
+	flex: 1 1 300px;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -77,6 +78,7 @@
 	height: 100%;
 	transition: all 0.9s;
 	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 
 .dogServices .front {
@@ -87,6 +89,7 @@
 .dogServices .back {
 	background-color: #d3d3d3;
 	color: #f5f5f5;
+	-webkit-transform: rotateY(180deg);
 	transform: rotateY(180deg);
 	position: absolute;
 	top: 0;
@@ -102,9 +105,11 @@
 }
 
 .dogServices .card:hover .back {
+	-webkit-transform: rotateY(0deg);
 	transform: rotateY(0);
 }
 
 .dogServices .card:hover .front {
+	-webkit-transform: rotateY(180deg);
 	transform: rotateY(-180deg);
 }
