--- a/partials/_services.scss
+++ b/partials/_services.scss
@@ -66,6 +66,7 @@
 .dogServices .card {
 	width: 350px;
 	min-height: 350px;
+	-webkit-perspective: 800px;
 	perspective: 800px;
 	position: relative;
 	margin: 50px;
@@ -76,6 +77,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	-webkit-transition: all 0.9s;
 	transition: all 0.9s;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
