--- a/partials/_mediaQueries.scss
+++ b/partials/_mediaQueries.scss
@@ -234,6 +234,37 @@
 	.dogServices {
 		flex-direction: column;
 		align-items: center;
+		.card {
+			width: 400px;
+			height: 400px;
+		}
+	}
+
+	.dogServices .back {
+		-webkit-transform: rotateY(0deg);
+		transform: rotateY(0deg);
+		&:hover {
+			-webkit-transform: rotateY(0deg);
+			transform: rotateY(0deg);
+		}
+	}
+
+	// on :hover - set values to same to offset any card-flipping styles
+	.dogServices .front {
+		-webkit-transform: rotateY(180deg);
+		transform: rotateY(180deg);
+		&:hover {
+			-webkit-transform: rotateY(180deg);
+			transform: rotateY(180deg);
+		}
+	}
+
+	.desktop-hidden {
+		display: block;
+		text-transform: uppercase;
+		font-size: 2rem;
+		font-weight: 700;
+		padding-bottom: 10px;
 	}
 
 	.servicesContainer {
