--- a/styles/style.css
+++ b/styles/style.css
@@ -456,7 +456,7 @@ header {
 .about p {
   font-family: "Roboto", sans-serif;
   font-size: 1.8rem;
-  line-height: 2.5;
+  line-height: 2;
   color: #262626;
   font-weight: 300;
   width: 90%;
@@ -572,7 +572,7 @@ ol.flickity-page-dots {
 .servicesContainer p {
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
-  line-height: 1.6;
+  line-height: 2;
   padding: 50px 0;
   text-align: center;
 }
@@ -589,7 +589,7 @@ ol.flickity-page-dots {
 }
 
 .servicesContainer .social i {
-  font-size: 7rem;
+  font-size: 5rem;
   padding: 0 55px;
   color: #f5f5f5;
   border-radius: 50%;
@@ -1146,10 +1146,6 @@ footer a:hover {
         -ms-flex-align: center;
             align-items: center;
   }
-  .dogServices .card {
-    width: 400px;
-    height: 400px;
-  }
   .dogServices .back {
     -webkit-transform: rotateY(0deg);
     transform: rotateY(0deg);
@@ -1166,12 +1162,16 @@ footer a:hover {
     -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
   }
-  .desktop-hidden {
+  .pricing p {
+    font-size: 1.8rem;
+  }
+  p.desktop-hidden {
     display: block;
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 700;
     padding-bottom: 10px;
+    text-decoration: underline;
   }
   .servicesContainer p {
     font-family: "Roboto", sans-serif;
@@ -1242,7 +1242,7 @@ footer a:hover {
 }
 
 /* SMALL MOBILE */
-@media screen and (min-width: 300px) and (max-width: 400px) {
+@media screen and (min-width: 300px) and (max-width: 450px) {
   .menu ul a {
     font-size: 4rem;
     padding: 20px;
@@ -1259,6 +1259,7 @@ footer a:hover {
   .dogServices .card {
     width: 250px;
     height: 250px;
+    margin: 25px auto;
   }
   .servicesContainer h3 {
     padding-top: 50px;
