--- a/styles/style.css
+++ b/styles/style.css
@@ -314,8 +314,8 @@ img {
 }
 
 header {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.3))), url(/assets/Website-cover.jpg);
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0.3) 100%), url(/assets/Website-cover.jpg);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.3))), url(../assets/Website-cover.jpg);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0.3) 100%), url(../assets/Website-cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
@@ -362,7 +362,7 @@ header {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: 5%;
+  margin-top: 10%;
 }
 
 .navigationMenu li {
