--- a/styles/style.css
+++ b/styles/style.css
@@ -742,7 +742,7 @@ ol.flickity-page-dots {
 
 .icon i {
   font-size: 5rem;
-  color: #fff;
+  color: #f5f5f5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -782,8 +782,8 @@ ol.flickity-page-dots {
 }
 
 iframe:hover {
-  -webkit-box-shadow: 5px 5px 25px #000;
-          box-shadow: 5px 5px 25px #000;
+  -webkit-box-shadow: 5px 5px 25px #262626;
+          box-shadow: 5px 5px 25px #262626;
 }
 
 /* FORM STYLES */
@@ -828,7 +828,7 @@ select {
   -webkit-appearance: none;
   font-size: 1.8rem;
   appearance: none;
-  border: 1px solid #000;
+  border: 1px solid #262626;
   background-image: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png);
   background-repeat: no-repeat;
   background-position: 95% center;
@@ -847,12 +847,12 @@ input {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  background-color: #fff;
-  color: #000;
+  background-color: #f5f5f5;
+  color: #262626;
   width: 600px;
   padding: 25px;
   margin-top: 20px;
-  border: 1px solid #000;
+  border: 1px solid #262626;
   border-radius: 5px;
 }
 
@@ -861,21 +861,15 @@ textarea {
   margin-top: 20px;
   padding: 25px;
   font-size: 1.8rem;
+  border: 1px solid #262626;
 }
 
 input[type="submit"] {
   background-color: #709fc1;
-  color: #fff;
+  color: #f5f5f5;
   text-transform: uppercase;
   font-size: 1.8rem;
-}
-
-select:hover,
-input:hover {
-  -webkit-box-shadow: 5px 5px #262626;
-          box-shadow: 5px 5px #262626;
-  -webkit-transition: 300ms ease-out;
-  transition: 300ms ease-out;
+  border: 1px solid #262626;
 }
 
 footer {
