--- a/styles/style.css
+++ b/styles/style.css
@@ -451,6 +451,7 @@ header {
   line-height: 3;
   font-weight: 700;
   color: #008ed6;
+  width: 90%;
 }
 
 .about p {
@@ -491,7 +492,7 @@ header {
 .fenrir h3,
 .fenrir p {
   text-align: right;
-  width: 100%;
+  width: 90%;
 }
 
 .mukka img,
@@ -501,14 +502,14 @@ header {
 
 .bioText {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 450px;
-          flex: 1 1 450px;
+      -ms-flex: 1 1 400px;
+          flex: 1 1 400px;
 }
 
 .teamImage {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 400px;
-          flex: 1 1 400px;
+      -ms-flex: 1 0 350px;
+          flex: 1 0 350px;
 }
 
 .teamImage img {
@@ -713,7 +714,7 @@ ol.flickity-page-dots {
 }
 
 .dogServices .card:hover .front {
-  -webkit-transform: rotateY(180deg);
+  -webkit-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
 }
 
@@ -1147,17 +1148,13 @@ footer a:hover {
         -ms-flex-align: center;
             align-items: center;
   }
-  .dogServices .card {
-    -webkit-perspective: 0;
-    perspective: 0;
+  .dogServices .card .front {
+    -webkit-transition: none;
+    transition: none;
   }
   .dogServices .back {
     -webkit-transform: rotateY(0deg);
     transform: rotateY(0deg);
-  }
-  .dogServices .front {
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
   }
   .pricing p {
     font-size: 1.8rem;
