added images for merch section and set up html for it as well. Made hamburger menu on desktop due to color issues

--- a/partials/_global.scss
+++ b/partials/_global.scss
@@ -58,7 +58,7 @@ a {
 	@include text(0, 2rem);
 	font-family: 'Roboto', sans-serif;
 	letter-spacing: 3px;
-	font-weight: bold;
+	font-weight: 700;
 	display: block;
 }
 
