--- a/styles/style.css
+++ b/styles/style.css
@@ -295,7 +295,7 @@ a {
   line-height: 0;
   font-family: 'Roboto', sans-serif;
   letter-spacing: 3px;
-  font-weight: bold;
+  font-weight: 700;
   display: block;
 }
 
@@ -314,8 +314,7 @@ img {
 }
 
 header {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.3))), url(../assets/Website-cover.jpg);
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0.3) 100%), url(../assets/Website-cover.jpg);
+  background-image: url(../assets/Website-cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
@@ -323,72 +322,69 @@ header {
   min-height: 80vh;
 }
 
-.headerContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-right: 20px;
+.hamburger,
+.exitResponsive {
+  display: block;
+  font-size: 4rem;
+  color: #fff;
+}
+
+.hamburger {
+  padding-top: 50px;
+}
+
+.exitResponsive {
+  text-align: center;
+  padding-top: 25px;
 }
 
 .navigationContainer {
+  position: absolute;
+  right: 50%;
+  display: none;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+}
+
+.menu ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 500ms ease-in;
+  transition: 500ms ease-in;
+  margin-top: 50px;
+}
+
+.menu ul a {
+  font-size: 5rem;
+  width: 100%;
+  padding: 50px 0;
+  color: #f5f5f5;
+  right: unset;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 .logo {
   border-radius: 50%;
   width: 75px;
   min-height: 75px;
-  margin: 40px 0 0 100px;
-}
-
-.navigationMenu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-top: 10%;
-}
-
-.navigationMenu li {
-  margin: 5px;
-}
-
-.navigationMenu a {
-  padding: 15px;
-  border-radius: 50px;
-  text-decoration: none;
-  font-size: 2rem;
-  color: #f5f5f5;
-  text-transform: uppercase;
-}
-
-.hvr-underline-from-center {
-  color: dodgerblue;
-}
-
-.hamburger,
-.exitResponsive {
-  display: none;
-}
-
-.show.navigationContainer {
-  display: block;
+  margin-top: 50px;
+  float: right;
 }
 
 /* CONNECT SECTION STYLES */
@@ -913,64 +909,6 @@ footer a:hover {
 
 /* TABLETS */
 @media screen and (min-width: 700px) and (max-width: 1024px) {
-  header {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.3))), url(../assets/Website-cover.jpg);
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0.3) 100%), url(../assets/Website-cover.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    background-position: center;
-    min-height: 100vh;
-  }
-  h2::after {
-    left: unset;
-    right: 50%;
-  }
-  .hamburger,
-  .exitResponsive {
-    display: block;
-    font-size: 3rem;
-    color: #fff;
-    margin-top: 60px;
-  }
-  .exitResponsive {
-    margin-left: 15%;
-  }
-  .navigationContainer {
-    position: absolute;
-    right: 50%;
-    display: none;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    color: #fff;
-  }
-  .menu ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-transition: 500ms ease-in;
-    transition: 500ms ease-in;
-  }
-  .menu ul a {
-    font-size: 5rem;
-    width: 100%;
-    padding: 50px 0;
-    color: #fff;
-    right: unset;
-  }
   .teamImage img {
     margin-top: 50px;
     margin: 0 auto;
