styling complete for desktop for merch section

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,6 +6,7 @@
 @import '../partials/about';
 @import '../partials/gallery';
 @import '../partials/services';
+@import '../partials/merchandise';
 @import '../partials/contact';
 @import '../partials/footer';
 @import '../partials/mediaQueries';
