--- a/styles/style.css
+++ b/styles/style.css
@@ -714,6 +714,71 @@ ol.flickity-page-dots {
   transform: rotateY(-180deg);
 }
 
+.merchandise {
+  margin: 100px 0;
+}
+
+.merchandise h2 {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.storeContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.productContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 25px;
+}
+
+.productContainer .productImage img {
+  width: 300px;
+  height: 300px;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+.productContainer .productImage img:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.productContainer .productText {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.productContainer .productText p {
+  font-size: 2.5rem;
+  color: #008ed6;
+  padding-top: 10px;
+  font-weight: bold;
+}
+
 /* CONTACT STYLES */
 .contact {
   background-color: #d3d3d3;
