--- a/partials/_merchandise.scss
+++ b/partials/_merchandise.scss
@@ -27,7 +27,7 @@
 		}
 	}
 	.productText {
-		margin-top: 30px;
+		margin: 30px 25px 0 0;
 		display: flex;
 		flex-direction: column;
 		text-align: center;
