--- a/styles/style.css
+++ b/styles/style.css
@@ -761,7 +761,7 @@ ol.flickity-page-dots {
 }
 
 .productContainer .productText {
-  margin-top: 30px;
+  margin: 30px 25px 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
