--- a/partials/_merchandise.scss
+++ b/partials/_merchandise.scss
@@ -27,7 +27,7 @@
 		}
 	}
 	.productText {
-		margin: 30px 25px 0 0;
+		margin-top: 30px;
 		display: flex;
 		flex-direction: column;
 		text-align: center;
@@ -39,5 +39,3 @@
 		}
 	}
 }
-
-// @media screen and (max-width: );
