--- a/styles/style.css
+++ b/styles/style.css
@@ -1065,11 +1065,14 @@ footer a:hover {
   .exitResponsive {
     display: block;
     font-size: 4rem;
-    color: #262626;
     font-weight: 800;
   }
   .hamburger {
     padding-top: 50px;
+    color: #262626;
+  }
+  .exitResponsive {
+    color: #f5f5f5;
   }
   .navigationContainer {
     position: absolute;
@@ -1129,8 +1132,6 @@ footer a:hover {
     margin: 0 auto;
   }
   .teamImage img {
-    width: 250px;
-    height: 250px;
     margin: 0 auto;
   }
   .bioText {
@@ -1243,6 +1244,7 @@ footer a:hover {
   }
   .exitResponsive {
     margin-left: 10%;
+    color: #f5f5f5;
   }
   .carousel-cell {
     height: 300px;
