--- a/styles/style.css
+++ b/styles/style.css
@@ -895,7 +895,7 @@ select {
   background-image: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png);
   background-repeat: no-repeat;
   background-position: 95% center;
-  width: 600px;
+  width: 550px;
   border-radius: 5px;
   padding: 25px;
 }
@@ -912,7 +912,7 @@ input {
       flex-wrap: wrap;
   background-color: #f5f5f5;
   color: #262626;
-  width: 600px;
+  width: 550px;
   padding: 25px;
   margin-top: 20px;
   border: 1px solid #262626;
@@ -920,7 +920,7 @@ input {
 }
 
 textarea {
-  width: 600px;
+  width: 550px;
   margin-top: 20px;
   padding: 25px;
   font-size: 1.8rem;
@@ -958,14 +958,21 @@ footer a:hover {
 }
 
 /* MEDIA QUERIES */
-@media screen and (max-width: 1285px) {
+@media screen and (max-width: 1250px) {
   .contactContainer {
     text-align: center;
   }
   .formContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .formInfo {
     text-align: center;
