--- a/styles/style.css
+++ b/styles/style.css
@@ -252,7 +252,7 @@ h2::after {
   content: "";
   position: absolute;
   bottom: -15px;
-  left: 46%;
+  left: calc(100% - 55%);
   background: #c71585;
   width: 125px;
   height: 3px;
@@ -895,7 +895,7 @@ select {
   background-image: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png);
   background-repeat: no-repeat;
   background-position: 95% center;
-  width: 550px;
+  max-width: 550px;
   border-radius: 5px;
   padding: 25px;
 }
@@ -912,7 +912,7 @@ input {
       flex-wrap: wrap;
   background-color: #f5f5f5;
   color: #262626;
-  width: 550px;
+  max-width: 550px;
   padding: 25px;
   margin-top: 20px;
   border: 1px solid #262626;
@@ -920,7 +920,7 @@ input {
 }
 
 textarea {
-  width: 550px;
+  max-width: 550px;
   margin-top: 20px;
   padding: 25px;
   font-size: 1.8rem;
@@ -1118,10 +1118,6 @@ footer a:hover {
   }
   main {
     text-align: center;
-  }
-  h2::after {
-    left: unset;
-    right: 40%;
   }
   .logo {
     margin-top: 30px;
