increased margin of service cards for desktop to achieve 2x2 layout

--- a/styles/style.css
+++ b/styles/style.css
@@ -660,7 +660,7 @@ ol.flickity-page-dots {
   -webkit-perspective: 800px;
   perspective: 800px;
   position: relative;
-  margin: 50px;
+  margin: 100px;
 }
 
 .dogServices .front,
@@ -978,6 +978,9 @@ footer a:hover {
   }
   .formInfo {
     text-align: center;
+  }
+  .dogServices .card {
+    margin: 50px;
   }
 }
 
