--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -85,7 +85,7 @@ select {
 	background-image: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png);
 	background-repeat: no-repeat;
 	background-position: 95% center;
-	max-width: 550px;
+	width: 550px;
 	border-radius: 5px;
 	padding: 25px;
 }
@@ -97,7 +97,7 @@ input {
 	flex-wrap: wrap;
 	background-color: $off-white;
 	color: $black-shade;
-	max-width: 550px;
+	width: 550px;
 	padding: 25px;
 	margin-top: 20px;
 	border: 1px solid $black-shade;
@@ -105,7 +105,7 @@ input {
 }
 
 textarea {
-	max-width: 550px;
+	width: 550px;
 	margin-top: 20px;
 	padding: 25px;
 	font-size: 1.8rem;
@@ -118,4 +118,10 @@ input[type="submit"] {
 	text-transform: uppercase;
 	font-size: 1.8rem;
 	border: 1px solid $black-shade;
+	transition: 300ms ease-in-out;
+	&:hover {
+		background-color: $black-shade;
+		color: $off-white;
+		font-weight: bold;
+	}
 }
