--- a/styles/style.css
+++ b/styles/style.css
@@ -897,7 +897,7 @@ select {
   background-image: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png);
   background-repeat: no-repeat;
   background-position: 95% center;
-  max-width: 550px;
+  width: 550px;
   border-radius: 5px;
   padding: 25px;
 }
@@ -914,7 +914,7 @@ input {
       flex-wrap: wrap;
   background-color: #f5f5f5;
   color: #262626;
-  max-width: 550px;
+  width: 550px;
   padding: 25px;
   margin-top: 20px;
   border: 1px solid #262626;
@@ -922,7 +922,7 @@ input {
 }
 
 textarea {
-  max-width: 550px;
+  width: 550px;
   margin-top: 20px;
   padding: 25px;
   font-size: 1.8rem;
@@ -935,6 +935,14 @@ input[type="submit"] {
   text-transform: uppercase;
   font-size: 1.8rem;
   border: 1px solid #262626;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+input[type="submit"]:hover {
+  background-color: #262626;
+  color: #f5f5f5;
+  font-weight: bold;
 }
 
 footer {
