--- a/partials/_services.scss
+++ b/partials/_services.scss
@@ -13,21 +13,22 @@
 	}
 	p {
 		@include text(2, 2rem);
-		padding: 50px 0;
+		padding-top: 50px;
 		text-align: center;
 	}
 }
 
 .servicesContainer .social {
+	padding-top: 75px;
 	display: flex;
 	justify-content: center;
 	transition: 300ms ease-in;
 	i {
 		font-size: 5rem;
-		padding: 0 55px;
+		padding: 0 50px;
 		color: #f5f5f5;
 		border-radius: 50%;
-		transition: 300ms ease-in;
+		transition: 300ms ease-in-out;
 	}
 }
 
