--- a/styles/style.css
+++ b/styles/style.css
@@ -573,11 +573,12 @@ ol.flickity-page-dots {
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
   line-height: 2;
-  padding: 50px 0;
+  padding-top: 50px;
   text-align: center;
 }
 
 .servicesContainer .social {
+  padding-top: 75px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -590,11 +591,11 @@ ol.flickity-page-dots {
 
 .servicesContainer .social i {
   font-size: 5rem;
-  padding: 0 55px;
+  padding: 0 50px;
   color: #f5f5f5;
   border-radius: 50%;
-  -webkit-transition: 300ms ease-in;
-  transition: 300ms ease-in;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
 }
 
 /*SERVICE CARDS STYLES */
@@ -1049,9 +1050,6 @@ footer a:hover {
   }
   .servicesContainer h3 {
     padding-top: 50px;
-  }
-  .quote {
-    padding: 0 10%;
   }
   .formContainer {
     display: -webkit-box;
